2006-04-25  Per Cederqvist  <ceder@lysator.liu.se>

	Get rid of compiler warning probably introduced 2006-04-05.
	* lyskom-rest.el (lyskom-fill-message): Removed pointless
	"(buffer-substring (point-min) (point))" whose value was not
	used.

2006-04-24  Per Cederqvist  <ceder@ingate.com>

	Fixed typo in docstring.
	* vars.el.in (kom-tell-phrases): Fixed spelling error in docstring
	that tried to refer to lyskom-tell-phrases-validation-keyword-list.

2006-04-05  David Byers  <davby@ida.liu.se>

	Re-implement line breaking heuristics:
	* lyskom-rest.el (lyskom-fill-disqualifying-regexp): Broken out
	from lyskom-fill-message to make regexp easier to understand.
	(lyskom-fill-message-next-line): New macro.
	(lyskom-fill-message-return): New macro.
	(lyskom-maybe-fill-region): New macro.
	(lyskom-fill-inline-text-regexp): New regexp to prevent concating
	it every time a line was examined, and to make it handle inlined
	texts with the wrong language.
	(lyskom-fill-message): New implementation.
	(lyskom-fill-next-paragraph): Guts of new lyskom-fill-message.
	(lyskom-fill-scan-quoted-paragraph): New function.
	(lyskom-fill-scan-empty-lines): New function.

	Fix bug 766:
	* swedish-strings.el,english-strings.el (lyskom-custom-strings):
	Adjusted kom-autowrap-doc.


2006-04-03  David Byers  <davby@ida.liu.se>

	* lyskom-buttons.el (lyskom-button-befriend): New function
	(i guess jhs forgot to check it in).
	(lyskom-button-moronify): New function (i guess jhs forgot to
	check it in).

2006-03-31  David Byers  <davby@ida.liu.se>

	* menus.el (lyskom-menu-template): Added kom-review-more-comments
	to menu.

	Fix bug 1510:
	* vars.el.in (lyskom-commands): Added kom-review-mode-comments.

	* swedish-strings.el,english-strings.el
	(lyskom-sv-mode-map,lyskom-en-mode-map): Added
	kom-review-more-comments.

	* review.el (lyskom-review-by-to): Set lyskom-have-review to
	indicate what kind of review.
	(lyskom-last-review-comments): New variable.