@@ -1,3 +1,8 @@
+2006-04-25  David Byers  <davby@ida.liu.se>
+
+	* lyskom-rest.el (lyskom-fill-next-paragraph): Fixed off-by-one
+	error in handling indented paragraphs.
+
 2006-04-25  Per Cederqvist  <ceder@lysator.liu.se>
 
 	Get rid of compiler warning probably introduced 2006-04-05.
